# master_crewai_pocs

./: README.md  pyproject.toml  report.md
meeting_minutes/: pyproject.toml
meeting_minutes/src/meeting_minutes/: main.py
meeting_minutes/src/meeting_minutes/crews/meeting_minutes_crew/: meeting_minutes_crew.py
payment_sanction/: README.md  pyproject.toml
payment_sanction/src/payment_sanction/: main.py
payment_sanction/src/payment_sanction/crews/Payment_Sanction_Crew/: PaymentSanctionCrew.py
payment_sanction/src/payment_sanction/crews/Payment_Sanction_Crew/config/: agents.yaml
payment_sanction_automation/: README.md  pyproject.toml
payment_sanction_automation/src/crewai_solution_for_payment_sanction_automation/: crew.py  main.py  streamlit_app.py  test.json
payment_sanction_automation/src/crewai_solution_for_payment_sanction_automation/config/: agents copy.yaml  agents.yaml  tasks copy.yaml  tasks.yaml
pdf_rag/: pyproject.toml  report.md
pdf_rag/db/: chroma.sqlite3
pdf_rag/src/pdf_rag/: crew.py  main.py
poem_flow/: poem.txt  pyproject.toml
poem_flow/src/: poem.txt
poem_flow/src/poem_flow/: main.py
src/ag_project1/: crew.py  data.txt  main.py
src/ag_project1/config/: agents.yaml  tasks.yaml
