[project]
name = "ag_project1"
version = "0.1.0"
description = "ag_project1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0"
]

[project.scripts]
ag_project1 = "ag_project1.main:run"
run_crew = "ag_project1.main:run"
train = "ag_project1.main:train"
replay = "ag_project1.main:replay"
test = "ag_project1.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
