[project]
name = "payment_sanction"
version = "0.1.0"
description = "payment_sanction using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0",
]

[project.scripts]
kickoff = "payment_sanction.main:kickoff"
run_crew = "payment_sanction.main:kickoff"
plot = "payment_sanction.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
