[project]
name = "crewai_solution_for_payment_sanction_automation"
version = "0.1.0"
description = "crewai_solution_for_payment_sanction_automation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0"
]

[project.scripts]
crewai_solution_for_payment_sanction_automation = "crewai_solution_for_payment_sanction_automation.main:run"
run_crew = "crewai_solution_for_payment_sanction_automation.main:run"
train = "crewai_solution_for_payment_sanction_automation.main:train"
replay = "crewai_solution_for_payment_sanction_automation.main:replay"
test = "crewai_solution_for_payment_sanction_automation.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
